Empty Symfony 5 app

--- a/.env
+++ b/.env
@@ -13,6 +13,11 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+# versions for docker-compose.yml
+NGINX_VERSION=1.15
+NGINX_PORT=8037
+PHP_VERSION=7.3
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=dd571dcfe7abd7139b1586c3cda673a6
