--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,7 +6,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass PHP_FPM_HOSTNAME:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
