--- a/.env
+++ b/.env
@@ -1,26 +1,4 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
-
-# versions for docker-compose.yml
-NGINX_VERSION=1.15
-NGINX_PORT=8030
-PHP_VERSION=7.3
-
-###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=dd571dcfe7abd7139b1586c3cda673a6
-#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-#TRUSTED_HOSTS='^localhost|example\.com$'
-###< symfony/framework-bundle ###
+# environmental variables for docker-compose.yml
+SERVER_NGINX_VERSION=1.15
+SERVER_NGINX_PORT=8030
+SERVER_PHP_VERSION=7.3
