--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.swp
 
 ###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
-/config/secrets/prod/prod.decrypt.private.php
-/public/bundles/
-/var/
-/vendor/
+server/.env.local
+server/.env.local.php
+server/.env.*.local
+server/config/secrets/prod/prod.decrypt.private.php
+server/public/bundles/
+server/var/
+server/vendor/
 ###< symfony/framework-bundle ###
