--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,21 @@ services:
     nginx:
         build:
             args:
-                VERSION: $NGINX_VERSION
+                VERSION: $SERVER_NGINX_VERSION
                 PHP_FPM_HOSTNAME: php-fpm
-            context: .
+            context: ./server
             dockerfile: ./docker/nginx/Dockerfile
         depends_on:
            - php-fpm
         ports:
-            - $NGINX_PORT:80
+            - $SERVER_NGINX_PORT:80
 
     php-fpm:
         build:
             args:
-                VERSION: $PHP_VERSION
-            context: .
+                VERSION: $SERVER_PHP_VERSION
+            context: ./server
             dockerfile: ./docker/php-fpm/Dockerfile
         volumes:
-            - .:/app
+            - ./server:/app
         command: sh -c 'composer install --no-interaction --optimize-autoloader && php-fpm'
