--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 
 services:
-    nginx:
+    php-nginx:
         build:
             args:
                 VERSION: $SERVER_NGINX_VERSION
