--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # environmental variables for docker-compose.yml
 SERVER_NGINX_VERSION=1.15
-SERVER_NGINX_PORT=8030
+SERVER_NGINX_PORT=8050
 SERVER_PHP_VERSION=7.3
+CLIENT_REACT_PORT=8051
