--- a/.github/workflows/docker_push_latest.yml
+++ b/.github/workflows/docker_push_latest.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   build_and_push:
-    name: Build and push php-fpm and nginx images
+    name: Build and push Docker images
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Build and push
+    - name: server-nginx
       run: |
-        PHP_FPM_IMAGE_TAG=${{ github.repository }}:latest
-        docker build . --build-arg "VERSION=7.3" -f docker/php-fpm/Dockerfile --tag $PHP_FPM_IMAGE_TAG
+#       PHP_FPM_IMAGE_TAG=${{ github.repository }}:latest
+#       docker build . --build-arg "VERSION=7.3" -f docker/php-fpm/Dockerfile --tag $PHP_FPM_IMAGE_TAG
 
-        NGINX_IMAGE_TAG="harvestcloud/nginx:latest"
-        docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f docker/nginx/Dockerfile --tag $NGINX_IMAGE_TAG
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push $PHP_FPM_IMAGE_TAG
-        docker push $NGINX_IMAGE_TAG
+       NGINX_IMAGE_TAG="harvestcloud/hello-server-nginx:latest"
+       docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f server/docker/nginx/Dockerfile --tag $NGINX_IMAGE_TAG
+#       docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+#       docker push $PHP_FPM_IMAGE_TAG
+#       docker push $NGINX_IMAGE_TAG
