--- a/.github/workflows/docker_push_latest.yml
+++ b/.github/workflows/docker_push_latest.yml
@@ -11,7 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: server-nginx
+    - name: Build server-nginx
       run: |
-       NGINX_IMAGE_TAG="harvestcloud/hello-server-nginx:latest"
-       docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f server/docker/nginx/Dockerfile --tag $NGINX_IMAGE_TAG
+        NGINX_IMAGE_TAG="harvestcloud/hello-server-nginx:latest"
+        docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f server/docker/nginx/Dockerfile --tag $NGINX_IMAGE_TAG
+    - name: Push server-nginx
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker push $NGINX_IMAGE_TAG
