--- a/.github/workflows/docker_push_latest.yml
+++ b/.github/workflows/docker_push_latest.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build and push Docker images
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
     - uses: actions/checkout@v1
     - name: Build and push server-nginx
       run: |
