--- a/.github/workflows/docker_push_latest.yml
+++ b/.github/workflows/docker_push_latest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-    - uses: actions/checkout@v1
+      uses: actions/checkout@v1
     - name: Build and push server-nginx
       run: |
         NGINX_IMAGE_TAG="harvestcloud/hello-server-nginx:latest"
