--- a/.github/workflows/docker_push_latest.yml
+++ b/.github/workflows/docker_push_latest.yml
@@ -12,9 +12,18 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+
     - name: Build and push server-nginx
       run: |
-        NGINX_IMAGE_TAG="harvestcloud/hello-server-nginx:latest"
-        docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f server/docker/nginx/Dockerfile --tag $NGINX_IMAGE_TAG
+        SERVER_NGINX_IMAGE_TAG="harvestcloud/hello-server-nginx:latest"
+        docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f server/docker/nginx/Dockerfile --tag $SERVER_NGINX_IMAGE_TAG
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push $NGINX_IMAGE_TAG
+        docker push $SERVER_NGINX_IMAGE_TAG
+
+    - name: Build and push server-php-fpm
+      run: |
+        SERVER_PHP_FPM_IMAGE_TAG="harvestcloud/hello-server-php-fpm:latest"
+        docker build . --build-arg "VERSION=1.15" --build-arg "PHP_FPM_HOSTNAME=localhost" -f server/docker/nginx/Dockerfile --tag $SERVER_PHP_FPM_IMAGE_TAG
+        docker build . --build-arg "VERSION=7.3" -f server/docker/php-fpm/Dockerfile --tag $PHP_FPM_IMAGE_TAG
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker push $SERVER_PHP_FPM_IMAGE_TAG
