--- a/.github/workflows/docker_push_latest.yml
+++ b/.github/workflows/docker_push_latest.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build and push server-php-fpm
       run: |
         SERVER_PHP_FPM_IMAGE_TAG="harvestcloud/hello-server-php-fpm:latest"
-        docker build . --build-arg "VERSION=7.3" -f server/docker/php-fpm/Dockerfile --tag $PHP_FPM_IMAGE_TAG
+        docker build . --build-arg "VERSION=7.3" -f server/docker/php-fpm/Dockerfile --tag $SERVER_PHP_FPM_IMAGE_TAG
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker push $SERVER_PHP_FPM_IMAGE_TAG
