--- a/client/docker/Dockerfile
+++ b/client/docker/Dockerfile
@@ -11,4 +11,4 @@ CMD ["yarn", "start"]
 FROM nginx:1.12-alpine as prod
 COPY --from=build /usr/src/app/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["/bin/bash", "-c", "/usr/share/nginx/html/env.sh && nginx -g \"daemon off;\""]
+CMD ["/bin/sh", "-c", "/usr/share/nginx/html/env.sh && nginx -g \"daemon off;\""]
