--- a/server/docker/php-fpm/Dockerfile
+++ b/server/docker/php-fpm/Dockerfile
@@ -14,7 +14,7 @@ RUN pecl install xdebug && \
     docker-php-ext-install pdo_mysql zip
 
 ## Copy php default configuration
-COPY ./server/docker/php-fpm/default.ini /usr/local/etc/php/conf.d/default.ini
+COPY ./docker/php-fpm/default.ini /usr/local/etc/php/conf.d/default.ini
 
 ENV APP_ENV=dev
 ADD . /app
@@ -24,4 +24,4 @@ RUN wget https://getcomposer.org/installer && \
     php installer --install-dir=/usr/local/bin/ --filename=composer && \
     rm installer
 
-RUN cd server && composer install --no-interaction --optimize-autoloader
+RUN composer install --no-interaction --optimize-autoloader
