Better service names in docker-comopose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.6'
 
 services:
-    php-nginx:
+    server-nginx:
         build:
             args:
                 VERSION: $SERVER_NGINX_VERSION
-                PHP_FPM_HOSTNAME: php-fpm
+                PHP_FPM_HOSTNAME: server-php-fpm
             context: ./server
             dockerfile: ./docker/nginx/Dockerfile
         depends_on:
-           - php-fpm
+           - server-php-fpm
         ports:
             - $SERVER_NGINX_PORT:80
 
-    php-fpm:
+    server-php-fpm:
         build:
             args:
                 VERSION: $SERVER_PHP_VERSION
@@ -23,7 +23,7 @@ services:
             - ./server:/app
         command: sh -c 'composer install --no-interaction --optimize-autoloader && php-fpm'
 
-    react:
+    client-react:
         environment:
             - CLIENT_SERVER_BASE_URL=http://localhost:8050
         build:
